--- a/TechTalk.SpecFlow.VsIntegration.Implementation/AutoComplete/IntellisensePresenter/CompletionSessionView.xaml
+++ b/TechTalk.SpecFlow.VsIntegration.Implementation/AutoComplete/IntellisensePresenter/CompletionSessionView.xaml
@@ -3,7 +3,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:IntellisensePresenter="clr-namespace:TechTalk.SpecFlow.VsIntegration.AutoComplete.IntellisensePresenter"
+    
+    xmlns:intellisensePresenter="clr-namespace:TechTalk.SpecFlow.VsIntegration.Implementation.AutoComplete.IntellisensePresenter"
     x:Class="TechTalk.SpecFlow.VsIntegration.AutoComplete.IntellisensePresenter.CompletionSessionView"
     mc:Ignorable="d" MinWidth="400" MinHeight="20" MaxHeight="350" MaxWidth="800" d:DesignHeight="200" d:DesignWidth="300">
     <UserControl.Resources>
@@ -17,7 +18,7 @@
                 <TextBlock Grid.Column="1" Text="{Binding Path=DisplayText, Mode=Default}" Padding="5,0,5,0" />
             </Grid>
         </DataTemplate>
-        <IntellisensePresenter:Text2Visibility x:Key="text2Visibility" />
+        <intellisensePresenter:Text2Visibility x:Key="text2Visibility" />
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
