--- a/ProjectTemplateWizard/UserInputControl.xaml
+++ b/ProjectTemplateWizard/UserInputControl.xaml
@@ -79,8 +79,8 @@
             <StackPanel Grid.Row="1" Grid.Column="0">
                 <Label Margin="0,16,0,10" Padding="0,0,0,0">Framework</Label>
                 <ComboBox x:Name="DotNetFrameworkComboBox" SelectedValuePath="Tag" IsEditable="True" IsReadOnly="True" Margin="0,0,0,0" Padding="8,8,8,8">
-                    <ComboBoxItem Tag="netcoreapp3.1" IsSelected="True">.Net Core 3.1</ComboBoxItem>
-                    <ComboBoxItem Tag="net472">.Net Framework 4.7.2</ComboBoxItem>
+                    <ComboBoxItem Tag="netcoreapp3.1" IsSelected="True">.NET Core 3.1</ComboBoxItem>
+                    <ComboBoxItem Tag="net472">.NET Framework 4.7.2</ComboBoxItem>
                 </ComboBox>
             </StackPanel>
 
