Fix styling issues in the Project Template Wizard - #2203

--- a/ProjectTemplateWizard/UserInputControl.xaml
+++ b/ProjectTemplateWizard/UserInputControl.xaml
@@ -55,55 +55,69 @@
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Static vsfx:VsResourceKeys.ThemedDialogButtonStyleKey}}" />
                     <Style TargetType="{x:Type Label}" BasedOn="{StaticResource {x:Static vsfx:VsResourceKeys.ThemedDialogLabelStyleKey}}" />
                     <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource {x:Static vsfx:VsResourceKeys.ThemedDialogComboBoxStyleKey}}" />
+                    <Style TargetType="{x:Type CheckBox}" BasedOn="{StaticResource {x:Static vsfx:VsResourceKeys.ThemedDialogCheckBoxStyleKey}}" />
                 </ResourceDictionary>
-
             </Grid.Resources>
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="180" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <Label Grid.Row="0" Grid.Column="0"
                    FontWeight="Normal" FontSize="33.96"
                    Margin="0,0,0,4" Padding="0,0,0,0">Create a new SpecFlow project</Label>
 
-            <StackPanel Grid.Row="1" Grid.Column="0">
-                <Label Margin="0,16,0,10" Padding="0,0,0,0">Framework</Label>
-                <ComboBox x:Name="DotNetFrameworkComboBox" SelectedValuePath="Tag" IsEditable="True" IsReadOnly="True" Margin="0,0,0,0" Padding="8,8,8,8">
-                    <ComboBoxItem Tag="netcoreapp3.1" IsSelected="True">.NET Core 3.1</ComboBoxItem>
-                    <ComboBoxItem Tag="net48">.NET Framework 4.8</ComboBoxItem>
-                </ComboBox>
-            </StackPanel>
+                <Grid Grid.Row="1" Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="6*" />
+                        <ColumnDefinition Width="4*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
 
-            <StackPanel Grid.Row="2" Grid.Column="0">
-                <Label Margin="0,16,0,10" Padding="0,0,0,0">Test Framework</Label>
-                <ComboBox x:Name="UnitTestFrameworkComboBox" SelectedValuePath="Tag" IsEditable="True" IsReadOnly="True" Margin="0,0,0,0" Padding="8,8,8,8">
-                    <ComboBoxItem Tag="runner" IsSelected="True">SpecFlow+ Runner</ComboBoxItem>
-                    <ComboBoxItem Tag="xunit">xUnit</ComboBoxItem>
-                    <ComboBoxItem Tag="nunit">NUnit</ComboBoxItem>
-                    <ComboBoxItem Tag="mstest">MSTest</ComboBoxItem>
-                </ComboBox>
-            </StackPanel>
+                    <StackPanel Grid.Row="0" Grid.Column="0">
+                        <Label Margin="0,16,0,10" Padding="0,0,0,0">Framework</Label>
+                        <ComboBox x:Name="DotNetFrameworkComboBox" SelectedValuePath="Tag" IsEditable="True" IsReadOnly="True" Margin="0,0,0,0" Padding="8,8,8,8">
+                            <ComboBoxItem Tag="netcoreapp3.1" IsSelected="True">.NET Core 3.1</ComboBoxItem>
+                            <ComboBoxItem Tag="net48">.NET Framework 4.8</ComboBoxItem>
+                        </ComboBox>
+                    </StackPanel>
 
-            <StackPanel Grid.Row="3" Grid.Column="0">
-                <CheckBox x:Name="FluentAssertionsCheckBox" IsChecked="True"  Margin="0,16,0,10">
-                    <TextBlock>Add FluentAssertions library</TextBlock>
-                </CheckBox>
-            </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="0">
+                        <Label Margin="0,16,0,10" Padding="0,0,0,0">Test Framework</Label>
+                        <ComboBox x:Name="UnitTestFrameworkComboBox" SelectedValuePath="Tag" IsEditable="True" IsReadOnly="True" Margin="0,0,0,0" Padding="8,8,8,8">
+                            <ComboBoxItem Tag="runner" IsSelected="True">SpecFlow+ Runner</ComboBoxItem>
+                            <ComboBoxItem Tag="xunit">xUnit</ComboBoxItem>
+                            <ComboBoxItem Tag="nunit">NUnit</ComboBoxItem>
+                            <ComboBoxItem Tag="mstest">MSTest</ComboBoxItem>
+                        </ComboBox>
+                    </StackPanel>
 
-            <Button Grid.Row="4" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="90" Height="28" x:Name="BackButton" Content="Back" Margin="0,0,8,0" Padding="13,5.5,13,5.5" />
-            <Button Grid.Row="4" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="90" Height="28" x:Name="CreateButton" Content="Create" Margin="0,0,0,0" Padding="13,5.5,13,5.5" />
+                    <StackPanel Grid.Row="2" Grid.Column="0">
+                        <CheckBox x:Name="FluentAssertionsCheckBox" Content="Add FluentAssertions library" IsChecked="True" Margin="0,16,0,10" />
+                    </StackPanel>
+                </Grid>
 
+            <Grid Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Button Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="90" MinHeight="28" x:Name="BackButton" Content="Back" Margin="0,0,8,0" Padding="13,5.5,13,5.5" IsCancel="True" />
+                <Button Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="90" MinHeight="28" x:Name="CreateButton" Content="Create" Margin="0,0,0,0" Padding="13,5.5,13,5.5" IsDefault="True" />
+            </Grid>
         </Grid>
     </DockPanel>
 
